tdf#145934 workaround rounding causing 'dancing characters'

Change-Id: I1fb260196beb0cc54232aa60a1191d3090fa31b0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126848
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>